datasets/dataset_txt/requests/requests_2528.txt
shuge commented on Mar 27, 2012
$ sudo python2.5 setup.py develop
Traceback (most recent call last):
  File "setup.py", line 6, in <module>
    import requests
  File "/Users/lee/Downloads/py-pkgs/requests/requests/__init__.py", line 25, in <module>
    from . import utils
  File "/Users/lee/Downloads/py-pkgs/requests/requests/utils.py", line 232
    return b"".join(L)
             ^
SyntaxError: invalid syntax

$ python2.5 --version
Python 2.5.4